<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/register_button"
        android:orientation="vertical">
        <include layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:id="@+id/full_name_text_view"
                        android:text="@string/full_name"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/full_name_edittext"
                        android:inputType="textPersonName"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/identity_number_text_view"
                        android:text="@string/identity_number"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/identity_number_edittext"
                        android:inputType="number"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:id="@+id/mobile_number_text_view"
                        android:text="@string/mobile"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="ltr"
                        android:orientation="horizontal">

                        <EditText
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:id="@+id/mobile_edittext"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:id="@+id/password_text_view"
                        android:text="@string/password"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/password_edittext"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:id="@+id/password_confirmation_text_view"
                        android:text="@string/password_confirmation"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/password_confirmation_edittext"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content" />
                </LinearLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:id="@+id/email_text_view"
                        android:text="@string/email"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/email_edittext"
                        android:hint="@string/optional"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:id="@+id/checkbox_terms"
                    android:text="@string/signup_terms"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:id="@+id/register_button"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:text="@string/register_now"/>
</RelativeLayout>
