<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.anonymouse.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/toolbar"
            android:id="@+id/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/identity_number_text_view"
                    android:text="@string/identity_number"/>
                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/identity_number_edittext"
                    android:inputType="number"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:id="@+id/mobile_number_text_view"
                    android:text="@string/mobile"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:id="@+id/mobile_edittext"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:id="@+id/forget_password_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/send"/>
</RelativeLayout>